# Incidence_Remediation_Agent

./: .gitignore  README.md  env.example  langgraph.json  pyproject.toml  requirements.txt  setup.py  test_kubernetes_tools.py
docker/: docker-compose.yaml
docs/: action_plan.md  configuration.md  jenkins_docs.md  logging.md  tool_recommendations.md
examples/: logging_demo.py
llms/: base.py  factory.py  providers.py
prompts/: system_prompt.md
protocols/mcp/: client.py  server.py
src/config/: config_manager.py  settings.py
src/main/: graph.py  nodes.py  react_agent.py
src/utils/: logging_config.py  rate_limiter.py  retry.py
tests/unit/: test_logging.py
tools/: base.py
tools/Loki/: grafana-datasources.yml  loki-config.yml  loki_log_aggregation_tool.py  promtail-config.yml
tools/github/: factory.py  github_tool.py
tools/jenkins/: factory.py  jenkins_tool.py
tools/kubernetes/: factory.py  kubernetes_tool.py
tools/powershell/: factory.py  runner.py
tools/prometheus/: factory.py  prometheus_tool.py
tools/slack/: factory.py  slack_tool.py
